--- a/index.html
+++ b/index.html
@@ -8,9 +8,31 @@
 </head>
 <body>
 <div class="container">
+
     <p>Enter Your Text For Your URL</p>
-    <input type="text" placeholder="Text Or URL">
-    <button type="submit">Generate QR Code</button>
+    <input type="text" placeholder="Text Or URL" id="qrtext">
+
+    <div id="imgbox">
+        <img src="" alt="" id="qrimage">
+    </div>
+
+    <button onclick="generateQRCode()">Generate QR Code</button>
 </div>
+
+<script>
+    let imgbox=document.getElementById("imgbox");
+    let qrimage=document.getElementById("qrimage");
+    let qrtext=document.getElementById("qrtext");
+
+
+   function generateQRCode() {
+
+    qrimage.src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data="+qrtext.value;
+    imgbox.classList.add("show-img");
+
+   }
+
+</script>
 </body>
+
 </html>
